alpm-types/src/relation/snapshots/base::opt_depend_invalid_string_parse_error@case_1.snap
---
source: alpm-types/src/relation/base.rs
---
error: invalid first character of package name
 | 
 | #invalid-name: this is an example dependency
 | ^ expected ASCII alphanumeric character
 | 
 = while parsing:
   │ → invalid package name
   └ alpm-package-name: (#invalid-name: this …)
     → invalid first character of package name
     → expected ASCII alphanumeric character, `_`, `@`, `+`
